Bring up to date with Java 11 and the latest version of keirin